--- a/index.html
+++ b/index.html
@@ -5,11 +5,84 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Online Marketing</title>
+    <!-- bootstrap css -->
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <!-- custom css -->
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/base.css">
 </head>
 
 <body>
+    <!-- header -->
+    <header class="header">
+        <!-- navigation -->
+        <nav class="navigation trans_3 w-100">
+            <div class="container d-flex justify-content-between align-items-center">
+                <!-- logo -->
+                <div class="logo">
+                    <img src="assets/img/logo-main.svg" alt="Logo" srcset="">
+                </div>
+                <!-- menu -->
+                <ul class="menu d-none d-lg-flex align-items-center h-100">
+                    <li class="menu-item active">
+                        <a href="#" class="menu-link">Home</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#" class="menu-link">Why us?</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#" class="menu-link">Freatures</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#" class="menu-link">Pricing</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#" class="menu-link">Contact</a>
+                    </li>
+                </ul>
+                <!-- button -->
+                <div class="actions d-none d-lg-block">
+                    <a href="#" class="login btn-main h-100"> Login</a>
 
+                    <a href="#" class="sign-up btn-main h-100">Sign Up</a>
+                </div>
+                <!-- menu bar -->
+                <div class="menu-bar d-lg-none d-block"></div>
+            </div>
+        </nav>
+        <!-- header content -->
+        <div class="header-main">
+            <div class="container">
+                <div class="row align-items-center justify-content-between">
+                    <!-- text content -->
+                    <div class="col-lg-5 col-12">
+                        <div class="caption text-upper">AWARD WINNING COMPANY</div>
+                        <h1 class="heading-content pt-4 pb-5">We Are The Best Digital Markeing</h1>
+                        <div class="subtitle">You need to get positive results when you spend hard earned revenue and time on any marketing effort. Great returns on marketing and promotions. </div>
+                        <div class="actions-content d-flex align-items-lg-center align-items-md-center align-items-start flex-column flex-lg-row flex-md-row">
+                            <a href="#" class="get-started btn-main flex-shrink-0">Get Started</a>
+                            <div class="watch d-flex align-items-center">
+                                <a href="#" class="icon-play d-flex align-items-center justify-content-center">
+                                    <img src="assets/img/play.svg" alt="play icon" srcset="">
+                                </a>
+                                <a href="#" class="watch-video flex-shrink-0">Watch Video</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- image content -->
+                    <div class="col-lg-6 col-12 pr-0">
+                        <img src="assets/img/img-header.webp" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- js -->
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/popper.min.js"></script>
 </body>
 
 </html>
