--- a/OnlineMarketing.html
+++ b/OnlineMarketing.html
@@ -60,7 +60,7 @@
             <div class="container">
                 <div class="row align-items-center justify-content-between">
                     <!-- text content -->
-                    <div class="col-lg-5 col-12">
+                    <div class="col-lg-5 col-12 col-text">
                         <div class="caption text-upper">AWARD WINNING COMPANY</div>
                         <h1 class="heading-content pt-4 pb-5">We Are The Best Digital Markeing</h1>
                         <div class="subtitle">You need to get positive results when you spend hard earned revenue and time on any marketing effort. Great returns on marketing and promotions. </div>
@@ -75,7 +75,7 @@
                         </div>
                     </div>
                     <!-- image content -->
-                    <div class="col-lg-6 col-12 pr-0">
+                    <div class="col-lg-6 col-12 pr-0 col-img">
                         <img src="assets/img/img-header.webp" alt="">
                     </div>
                 </div>
@@ -518,10 +518,11 @@
     <!-- js -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/scrollreveal.min.js"></script>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
