--- a/OnlineMarketing.html
+++ b/OnlineMarketing.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- overlay -->
-    <div class="overlay"></div>
+    <div class="overlay d-lg-none"></div>
     <!-- header -->
     <header class="header">
         <!-- navigation -->
